# Conan_Heimdall_sbom

./: CMakeFile.txt  CMakeLists-2.txt  CMakeLists.txt  main.yml
.github/workflows/: main.yml
[requires] # Example dependencies, add what your project uses gtest/: conanfile.txt
src/: CMakeLists.txt  main.cpp
src/gold/: CMakeFile.txt  GoldAdapter.cpp  GoldAdapter.h
src/lld/: CMakeFile.txt  LLDAdapter.h
